# routes/api.php
@@ -5,6 +5,9 @@ use App\Http\Controllers\Api\EntityController;
 use App\Http\Controllers\Api\FilterController;
 use App\Http\Controllers\Api\OrderController;
 use App\Http\Controllers\Api\ProductController;
+use App\Http\Controllers\Api\RoleController;
+use App\Http\Controllers\Api\SettingController;
+use App\Http\Controllers\Api\TemplateController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -30,9 +33,17 @@ Route::apiResource('filters', FilterController::class);
 
 Route::apiResource('products', ProductController::class);
 
+Route::get('products/get-filters/{entityId}', [ProductController::class, 'getFilters']);
+
 Route::apiResource('orders', OrderController::class);
 
 
 Route::get('accounts/{id}/orders', [AccountController::class, 'orders']);
 
 Route::apiResource('accounts', AccountController::class);
+
+Route::apiResource('settings', SettingController::class);
+
+Route::apiResource('templates', TemplateController::class);
+
+Route::apiResource('roles', RoleController::class);
